# andreas-services

./: .env.example  .gitignore  CLAUDE.md  README.md  STYLE_TRANSFER_INTEGRATION.md  docker-compose.yml  index.html  package.json  tailwind.config.js  vite.config.js
backend/: Dockerfile  requirements.txt
dev-docs/: AWS_SETUP.md  CLAUDE.md  ENVIRONMENTS.md  IAM_SETUP.md  TERRAFORM_ARCHITECTURE.md
humbugg/: CLAUDE.md  Deploy.ps1  Humbugg.sln  README.md
infra/: README.md
my-tools/: pyproject.toml
my-tools/.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
my-tools/.planning/phases/01-foundation-scanners/: 01-1-PLAN.md  01-1-SUMMARY.md  01-2-PLAN.md  01-2-SUMMARY.md  01-3-PLAN.md  01-RESEARCH.md
my-tools/python/: requirements.txt
my-tools/python/my_tools/: cli.py
my-tools/python/my_tools/media/: commands.py
my-tools/python/my_tools/photos/: cache.py  commands.py  icloud_scanner.py  takeout_scanner.py
my-tools/python/my_tools/qr/: commands.py
my-tools/python/my_tools/tests/: conftest.py  test_cli_smoke.py  test_icloud_scanner.py  test_schema.py  test_takeout_scanner.py
nyc-events-aggregator/: CLAUDE.md  cloudformation.yaml  deploy.sh
savva-tools/: CLAUDE.md  kindle_formatter.py  requirements.txt  url_to_qr.py
scout/: .env.example  .gitignore  CLAUDE.md  cloudformation-pr-preview.yaml  cloudformation-pr.yaml  cloudformation.yaml  deploy.sh  setup-frontend.sh
server/: Dockerfile.lambda  app.js  index.js  lambda.js
src/: App.jsx
storybook/: CLAUDE.md  README.md
terraform/: README.md  backend.tf  main.tf  outputs.tf  variables.tf
(+659 files in other folders)
